# Open-Web-Scraper

./: Dockerfile  LICENSE  README.md  gradio_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
config/: envs.py  logger.py
data/: readme.md
pipelines/: Deployment-README.md
src/: main.py
