[project]
name = "open-web-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.42.0",
    "langchain>=0.3.27",
    "openai>=1.99.6",
    "pydantic>=2.11.7",
    "ragas>=0.3.0",
    "requests>=2.32.4",
]
